[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/minimap.gd" id="1"]

[node name="Minimap" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = 175.0
script = ExtResource("1")

[node name="MapPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MapTexture" type="TextureRect" parent="MapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -20.0
stretch_mode = 5

[node name="PlayerMarker" type="Control" parent="MapPanel"]
layout_mode = 1
offset_left = 65.0
offset_top = 65.0
offset_right = 75.0
offset_bottom = 75.0

[node name="Arrow" type="Label" parent="MapPanel/PlayerMarker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "โฒ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Compass" type="Label" parent="MapPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -18.0
offset_right = 20.0
offset_bottom = -2.0
text = "ะก"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14
